Closed
Bug 347160
Opened 19 years ago
Closed 19 years ago
SeaMonkey crashes, when submitting request in google.de
Categories
(SeaMonkey :: Search, defect)
SeaMonkey
Search
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: r.s.t, Assigned: ajschult784)
References
()
Details
(Keywords: crash, fixed-seamonkey1.1a, fixed1.8.1)
Attachments
(2 files)
26.40 KB,
application/xml
|
Details | |
2.81 KB,
patch
|
timeless
:
review+
mtschrep
:
approval1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.6) Gecko/20060729 SeaMonkey/1.0.4
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.6) Gecko/20060729 SeaMonkey/1.0.4
It crashes only in 1.0.4 and only with the German version of Google.
Reproducible: Always
Steps to Reproduce:
1. Deinstall previous version
2. delete complete SeaMonkey folder
3. install SeaMonkey 1.0.4
4. call www.google.de
5. enter anything
6. submit
Actual Results:
crash
With every other version it worked fine. (I had all, starting from Mosaic and Netscape 1)
With the latest nightly build (02-Aug-2006) it works fine.
With google.it, google.es it works fine.
(google.com is redirected to google.de)
With google.at it crashes, too.
Only the English (US) Language Pack is installed.
Now I deleted all my cookies and it doesn't crash anymore, when I submit a google request in the browser.
But when I submit a request in the location bar, it crashes always.
It crashes with each default search engine: Google, AskJeeves, dmoz
With the nightly build this works fine, too.
1.0.4 sucks!
Keywords: crash
I am working for several hours on this **** crash!!!
The past 12 years I am using Netscape/Mozilla I never had such problems!
How do I get this **** Talkback Agent to work?
In
http://ftp.mozilla.org/pub/mozilla.org/seamonkey/nightly/latest-mozilla1.8.0/seamonkey-1.0.4.en-US.win32.zip
is no Talkback Agent and
http://releases.mozilla.org/pub/mozilla.org/seamonkey/releases/1.0.4/windows-xpi/talkback.xpi
seems to be empty, except a small JS-script.
At least I want to able to report this ****.
The only version of the Talkback Agent I found was in
http://ftp.mozilla.org/pub/mozilla.org/seamonkey/nightly/latest-trunk/windows-xpi/talkback.xpi
I installed this in 1.0.4, turned the agent on.
When I try to search in the location bar it still crashes everytime, but the Talkback Agent doesn't catch the crash.
Now I testet it with several versions:
1.0.3: crash
1.0.4: crash
1.0.x nightly: crash
1.1 nightly: crash
1.5 nightly: no crash
Unfortunately it is not possible to report the crash with the Talkback Agent.
After 12 years using it, I give up!
Can anyone recommend a mature browser?
Can I tweak Firefox & Co. or Opera to get the feature I have with SeaMonkey?
Severity: critical → blocker
Comment 4•19 years ago
|
||
no crash for me using Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.8.1b1) Gecko/20060727 SeaMonkey/1.1a
Comment 5•19 years ago
|
||
WFM Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.6) Gecko/20060729 SeaMonkey/1.0.4 no crash.
Version: unspecified → 1.0 Branch
Comment 6•19 years ago
|
||
I tested this with my Seamonkey: (Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060803 SeaMonkey/1.5a).
Result: No crash
Assignee | ||
Comment 7•19 years ago
|
||
Talkback is only included with trunk builds because those are the only ones created by .mozilla.org. Talkback cannot be added to non-talkback builds.
Do you crash if you create a new profile (tools->switch profile)?
Severity: blocker → critical
Version: 1.0 Branch → 1.8 Branch
The crash depends on my profile. There are 2 extensions in my chrome folder:
extuninstall and flashblock
With a fresh chrome folder there is no crash.
With this chrome.rdf it crashes even when the extension jars are not in the chrome folder.
Assignee | ||
Comment 9•19 years ago
|
||
Thanks for working to track this down. Unfortunately, I still don't crash with your chrome.rdf file. Do you crash with that chrome.rdf and an otherwise pristine profile?
Reporter | ||
Comment 10•19 years ago
|
||
(In reply to comment #9)
> Thanks for working to track this down. Unfortunately, I still don't crash with
> your chrome.rdf file. Do you crash with that chrome.rdf and an otherwise
> pristine profile?
Yes, I moved my profile folder, so that SeaMonkey creates a pristine profile.
Than I replaced chrome.rdf (nothing more).
In Navigator\Internet Search I set Google as Default Search Engine, and in Proxies I set our NTLM-based proxy.
When you then try to submit a request via the location bar to Google, it crashes everytime.
Is there really no possibility to add the Talkback Agent to a release version of SeaMonkey?
How do you want to fix such crashes?
There is even no Talkback Agent in
http://ftp.mozilla.org/pub/mozilla.org/seamonkey/nightly/latest-mozilla1.8.0/seamonkey-1.0.4.en-US.win32.zip
Assignee | ||
Comment 11•19 years ago
|
||
OK, I'm seeing the crash, but only on the branch. Your unhappy chrome.rdf has the problem mentioned in bug 305608 comment 9. Because of that, SeaMonkey seems to have problems getting prefs. So http://lxr.mozilla.org/mozilla1.8/source/xpfe/components/search/src/nsInternetSearchService.cpp#4851
fails to get defaultEngineName and doesn't check for failure (since it assumes the default pref must exist), but defaultEngineName is NULL and we crash.
Current trunk doesn't have this problem because of KaiRo's content/language pack re-org (bug 325473). I don't know if that "fixed" the real problem or just invalidated that part of chrome.rdf. Either way, it's not something we can really push to the branch.
I'll add checks to nsInternetSearchService to prevent the crash. You should be able to delete the extra "urn:mozilla:locale:___" lines from your chrome.rdf to fix your profile.
Assignee: general → ajschult
Status: UNCONFIRMED → NEW
Component: General → Search
Ever confirmed: true
Product: Mozilla Application Suite → Core
Version: 1.8 Branch → Trunk
Assignee | ||
Updated•19 years ago
|
OS: Windows XP → All
QA Contact: general → search
Hardware: PC → All
Assignee | ||
Comment 12•19 years ago
|
||
a -w patch for the second chunk would look like:
- if (selectedEngineName) {
+ if (NS_SUCCEEDED(rv) && selectedEngineName) {
Attachment #232280 -
Flags: review?(timeless)
Attachment #232280 -
Flags: review?(timeless) → review+
Assignee | ||
Comment 13•19 years ago
|
||
FIXED
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 14•19 years ago
|
||
Comment on attachment 232280 [details] [diff] [review]
check rvs
Firefox builds but doesn't actually use this file
Attachment #232280 -
Flags: approval1.8.1?
Comment 15•19 years ago
|
||
Comment on attachment 232280 [details] [diff] [review]
check rvs
a=schrep for drivers.
Attachment #232280 -
Flags: approval1.8.1? → approval1.8.1+
Assignee | ||
Updated•19 years ago
|
Keywords: fixed-seamonkey1.1a,
fixed1.8.1
Updated•17 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•