Bug 347160: SeaMonkey crashes, when submitting request in google.de.  r=timeless